--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,14 @@ dependencies {
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	//	Jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	// Redis
+	implementation 'org.springframework.data:spring-data-redis:3.1.5'
+	implementation 'org.springframework.boot:spring-boot-starter-cache:3.1.2'
 }
 
 tasks.named('test') {
