--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	// S3
+	implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
+
 }
 
 tasks.named('test') {
