--- a/build.gradle
+++ b/build.gradle
@@ -44,13 +44,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	//	Jwt
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 
 	// Redis
-	implementation 'org.springframework.data:spring-data-redis:3.1.5'
-	implementation 'org.springframework.boot:spring-boot-starter-cache:3.1.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 
     // S3
 	implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
