#14 이메일 인증 기능 구현

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     // S3
 	implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
 
+	// Email
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
 }
 
 tasks.named('test') {
