--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,31 @@ dependencies {
 	// Email
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+	// Elastic Search
+	// implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+
+	//Querydsl
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+def querydslDir = layout.buildDirectory.dir('src/main/generated').get().asFile
+
+tasks.withType(JavaCompile).configureEach {
+	options.generatedSourceOutputDirectory.set(file(querydslDir))
+}
+
+sourceSets {
+	main.java.srcDirs += [querydslDir]
+}
+
+clean {
+	file(querydslDir).deleteDir()
 }
